--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "wayfarer",
   "version": "1.0.0",
   "description": "A Public transportation booking server",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "core-js": "^3.1.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -14,6 +17,7 @@
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.4.4",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "eslint": "^5.16.0",
@@ -25,8 +29,7 @@
   "scripts": {
     "start": "nodemon --exec babel-node server.js",
     "lint": "eslint .",
-    "build": "babel server.js --out-dir build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --require @babel/register tests/*.js --exit"
   },
   "repository": {
     "type": "git",
