fix: travis-ci build fail

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 services:
   - postgresql
+env:
+  - DB=postgres://postgres:Tope1711@127.0.0.1:5432/api
 node_js:
   - 'node'
 before_script:
@@ -8,4 +10,4 @@ before_script:
   - psql -c "CREATE USER kay WITH PASSWORD 'olu';" -U postgres
 cache:
   directories:
-    - "$HOME/.npm"
+    - "node_modules"
