--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ services:
   - postgresql
 addons:
   postgresql: "11.3"
+before_script:
+  - psql -c 'create database api;' -U postgres
 env:
   - DB=postgres://postgres:Tope1711@127.0.0.1:5432/api
 node_js:
