--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: node_js
+node_js:
+  - 'lts/*'
 services:
   - postgresql
 addons:
   postgresql: "11.3"
 env:
-  - DATABASE_URL= postgres://postgres:Tope1711@127.0.0.1:5432/api
-node_js:
-  - 'lts/*'
+  global:
+  - NODE_ENV=test
+before_script:
+  - psql -c 'create database book_test;' -U postgres
+  - psql -c "CREATE USER kay WITH PASSWORD bar;" -U postgres
 cache:
   directories:
     - "$HOME/.npm"
