--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,7 @@ services:
 addons:
   postgresql: "11.3"
 env:
-  - DATABASE_URL = postgres://postgres:Tope1711@127.0.0.1:5432/api SECRET_KEY = bubbagumpshrimp EXPIRY_SECONDS = 604800
-before_script:
-  - psql -c 'create database api;' -U postgres
-  - psql -c "CREATE USER kay WITH PASSWORD bar;" -U postgres
+  - DATABASE_URL=postgres://postgres:Tope1711@127.0.0.1:5432/api SECRET_KEY=bubbagumpshrimp
 cache:
   directories:
     - "$HOME/.npm"
