--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 addons:
   postgresql: "11.3"
 env:
-  - DATABASE_URL=postgres://postgres:Tope1711@127.0.0.1:5432/api SECRET_KEY=bubbagumpshrimp
+  - DATABASE_URL=postgres://postgres:Tope1711@127.0.0.1:5432/api SECRET_KEY=bubbagumpshrimp EXPIRY_SECONDS = 604800
 cache:
   directories:
     - "$HOME/.npm"
