--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ addons:
   postgresql: "11.3"
 env:
   - DATABASE_URL=postgres://postgres:Tope1711@127.0.0.1:5432/api SECRET_KEY=bubbagumpshrimp EXPIRY_SECONDS=604800 PORT=3000
+before_script:
+  - psql -c 'CREATE DATABASE api;' -U postgres
 cache:
   directories:
     - "$HOME/.npm"
