fix: Install mocha and babel global

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
   - DATABASE_URL=postgres://postgres:Tope1711@localhost:5432/api SECRET_KEY=bubbagumpshrimp EXPIRY_SECONDS=604800 PORT=3000
 
 before_script:
+  - psql --version
   - cp database.yml.travis database.yml
 
 cache:
@@ -24,3 +25,7 @@ cache:
 notifications:
   email:
     on_failure: never
+
+install:
+  - npm install -g mocha
+  - npm install -g @babel/register
