--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
 
 before_script:
   - cp database.yml.travis database.yml
+  - psql -c 'create database api;' -U postgres
 
 cache:
   directories:
