refactor: Database config

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 PORT=3000
-DATABASE_URL=postgres://postgres:Tope1711@localhost:5432/api
+DB_HOST=localhost
+DB_USER=postgres
+DB_DATABASE=api
+DB_PW=Tope1711
+DB_PORT=5432
 SECRET_KEY=bubbagumpshrimp
 EXPIRY_SECONDS=604800
