--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
   postgresql: "11.3"
 
 env:
-  - DATABASE_URL=postgres://ewrebfjtpmmqxm:9cb4c0ff9f818db83a2374889963d2d03f552d44e7518dfcd3cf22941d2b9b56@ec2-174-129-229-106.compute-1.amazonaws.com:5432/d9v688c8335t2o SECRET_KEY=bubbagumpshrimp EXPIRY_SECONDS=604800 PORT=3000
+  - DB_USER=postgres DB_HOST=localhost DB_DATABASE=api DB_PW=Tope1711 DB_PORT=5432 SECRET_KEY=bubbagumpshrimp EXPIRY_SECONDS=604800 PORT=3000
 
 before_script:
   - cp database.yml.travis database.yml
