test: Trying localhost again

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ PORT=3000
 DB_PORT=5432
 SECRET_KEY=bubbagumpshrimp
 EXPIRY_SECONDS=604800
-DB_USER=igekybyt 
-DB_HOST=otto.db.elephantsql.com (otto-01) 
-DB_DATABASE=igekybyt 
-DB_PW=bq3Fh6DILuXf7TVJqSSXIeGXGSBzncdo 
+DB_USER=postgres 
+DB_HOST=localhost 
+DB_DATABASE=api
+DB_PW=Tope1711
  
