--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,16 @@ addons:
 env:
   - DB_USER=postgres DB_HOST=localhost DB_DATABASE=api DB_PW=Tope1711 DB_PORT=5432 SECRET_KEY=bubbagumpshrimp EXPIRY_SECONDS=604800 PORT=3000
 
+before_install:
+  - sudo apt-get update
+  - sudo apt-get
+  - sudo apt-get install -y postgresql-11 postgresql-client-11
+  - sudo cp /etc/postgresql/{9.6,11}/main/pg_hba.conf
+  - sudo service postgresql restart 11 
 before_script:
   - psql --version
   - psql -c 'create database api;' -U postgres
-  - psql -c "CREATE USER travis WITH PASSWORD 'ci';" -U postgres
+  - psql -c "CREATE USER foo WITH PASSWORD 'ci';" -U postgres
 
 cache:
   directories:
