--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,20 @@ language: node_js
 node_js:
   - 'lts/*'
 
-services:
-  - postgresql
-
-addons:
-  - postgresql: "11.3"
-
 env:
   - DB_USER=postgres DB_HOST=localhost DB_DATABASE=api DB_PW=Tope1711 DB_PORT=5432 SECRET_KEY=bubbagumpshrimp EXPIRY_SECONDS=604800 PORT=3000
 
 before_script:
   - psql --version
-  - psql -c 'create database api;' -U postgres
+  - psql -c 'CREATE DATABASE api;' -U postgres
   - psql -c "CREATE USER foo WITH PASSWORD 'ci';" -U postgres
+  - psql -c "CREATE TABLE users;" -U postgres
+
+services:
+  - postgresql
+
+addons:
+  - postgresql: "11.3"
 
 cache:
   directories:
