--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
   - psql --version
   - psql -c 'CREATE DATABASE api;' -U postgres
   - psql -c "CREATE USER foo WITH PASSWORD 'ci';" -U postgres
-  - psql -c "CREATE TABLE users;" -U api
+  - psql -c "CREATE TABLE users;" -U postgres
 
 services:
   - postgresql
