--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,17 @@ language: node_js
 node_js:
   - 'lts/*'
 
+addons:
+  postgresql: "11.3"
+  apt:
+    packages:
+    - postgresql-11
+    - postgresql-client-11
 env:
-  - DB_USER=postgres DB_HOST=localhost DB_DATABASE=api DB_PW=Tope1711 DB_PORT=5432 SECRET_KEY=bubbagumpshrimp EXPIRY_SECONDS=604800 PORT=3000
+  global:
+  - PGPORT=5433 DB_USER=postgres DB_HOST=localhost DB_DATABASE=api DB_PW=Tope1711 DB_PORT=5432 SECRET_KEY=bubbagumpshrimp EXPIRY_SECONDS=604800 PORT=3000
 
-before_install:
-  - sudo service postgresql stop
-  - sudo apt-get --yes remove postgresql-10-postgis-2.4
-  - sudo apt install -yq --no-install-suggests --no-install-recommends postgresql-11-postgis-2.5-scripts postgresql-11 postgresql-client-11 postgresql-11-postgis-2.5
-  - sed -e 's/^port.*/port = 5432/' /etc/postgresql/11/main/postgresql.conf > postgresql.conf
-  - sudo chown postgres postgresql.conf
-  - sudo mv postgresql.conf /etc/postgresql/11/main
-  - sudo cp /etc/postgresql/{10,11}/main/pg_hba.conf
-  - sudo service postgresql restart 11
 before_script:
-  - export PATH="/usr/lib/postgresql/11/bin:$PATH"
-  - psql -c 'CREATE ROLE travis SUPERUSER LOGIN CREATEDB;' -U postgres
   - psql --version
   - psql -c 'CREATE DATABASE api;' -U postgres
 
