--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "@babel/node": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
+    "@istanbuljs/nyc-config-babel": "^2.1.1",
+    "babel-plugin-istanbul": "^5.1.4",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "coveralls": "^3.0.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
     "eslint-plugin-import": "^2.18.0",
     "mocha": "^6.1.4",
-    "nodemon": "^1.19.1"
+    "mocha-lcov-reporter": "^1.3.0",
+    "nodemon": "^1.19.1",
+    "nyc": "^14.1.1"
   },
   "engines": {
     "node": "10.x"
@@ -33,7 +38,8 @@
   "scripts": {
     "start": "nodemon --exec babel-node server.js",
     "lint": "eslint .",
-    "test": "./node_modules/.bin/mocha --require @babel/register tests/*.js --exit"
+    "test": "nyc ./node_modules/.bin/mocha --require @babel/register tests/*.js --exit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
