test: create script for travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ before_script:
 
 after_success: npm run coverage
 
+script:
+  - npm run script travis-test
+
 cache:
   directories:
     - "$HOME/.npm"
