--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "scripts": {
     "start": "nodemon --exec babel-node server.js",
     "lint": "eslint .",
-    "test": "nyc ./node_modules/.bin/mocha --require @babel/register tests/*.js --exit && nyc report --reporter=text-lcov | coveralls"
+    "test": "nyc ./node_modules/.bin/mocha --require @babel/register tests/*.js --exit", 
+    "travis-test": "nyc ./node_modules/.bin/mocha --require @babel/register tests/*.js --exit && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
