--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 after_success: npm run coverage
 
 script:
-  - npm run script travis-test
+  - npm run travis-test
 
 cache:
   directories:
