--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ before_script:
 
 after_success: npm run coverage
 
-script:
-  - npm run travis-test
+script: npm run travis-test
 
 cache:
   directories:
